# kadu

./: .clang-format  .config  .config.mac  .config.win32  .cvsignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  AUTHORS.html  CMakeLists.txt  ChangeLog  ChangeLog.OLD-PL  Doxyfile  FAQ  HISTORY  INSTALL  INSTALL-mac.txt  INSTALL-win32.txt  Instaluj  Instaluj-RH8  Instaluj.tcl  Makefile.am  Makefile.in  Plugins.cmake  README  THANKS  TODO  VERSION  acinclude.m4  aclocal.m4  acsite.m4  chat.html  cmake_uninstall.cmake.in  config.h.in  config.status  configure  configure.ac  devel-hints.html  devel-hints.txt  (+26 more)
kadu/: .cvsignore  Makefile.am  Makefile.in  about.cpp  about.h  action.cpp  action.h  adduser.cpp  adduser.h  chat.cpp  chat.h  chat_colors.cpp  chat_colors.h  chat_manager.cpp  chat_manager.h  chat_manager_slots.cpp  chat_manager_slots.h  chat_message.cpp  chat_message.h  chat_styles.cpp  chat_styles.h  color_selector.cpp  color_selector.h  config.cpp  config.h  config_dialog.cpp  config_dialog.h  config_file.cpp  config_file.h  custom_input.cpp  custom_input.h  dcc.cpp  dcc.cpp.voice  dcc.h  dcc.h.voice  debug.cpp  debug.h  dnshandler.cpp  dnshandler.h  dock_widget.cpp  (+110 more)
kadu-core/: .configuration-ui-translations.cpp  CMakeLists.txt  Makefile.am  Makefile.in  about.cpp  about.h  account.cpp  account.h  account_data.h  account_manager.cpp  account_manager.h  action.cpp  action.h  activate.cpp  activate.h  attention-service.cpp  attention-service.h  aware-object.h  chat.cpp  chat.h  chat_actions.cpp  chat_actions.h  chat_edit_box.cpp  chat_edit_box.h  chat_manager.cpp  chat_manager.h  chat_manager_slots.cpp  chat_manager_slots.h  chat_message.cpp  chat_message.h  chat_messages_view.cpp  chat_messages_view.h  chat_styles.cpp  chat_widget.cpp  chat_widget.h  chat_window.cpp  chat_window.h  color_button.cpp  color_button.h  color_selector.cpp  (+144 more)
kadu-core/accounts/: CMakeLists.txt  account-data.cpp  account-data.h  account-details.cpp  account-details.h  account-manager.cpp  account-manager.h  account-module.cpp  account-module.h  account-notification-service.cpp  account-notification-service.h  account-proxy-settings.cpp  account-proxy-settings.h  account-shared.cpp  account-shared.h  account-status-container.cpp  account-status-container.h  account-storage.cpp  account-storage.h  account.cpp  account.h  account_data.cpp  account_data.h  account_manager.cpp  account_manager.h  accounts-aware-object.cpp  accounts-aware-object.h  accounts_aware_object.cpp  accounts_aware_object.h
kadu-core/actions/: CMakeLists.txt  action-context-provider.h  action-context.cpp  action-context.h  action-description.cpp  action-description.h  action.cpp  action.h  actions-module.cpp  actions-module.h  actions.cpp  actions.h  add-group-action.cpp  add-group-action.h  add-user-action.cpp  add-user-action.h  base-action-context.cpp  base-action-context.h  copy-description-action.cpp  copy-description-action.h  copy-personal-info-action.cpp  copy-personal-info-action.h  exit-action.cpp  exit-action.h  injector-registered-actions.cpp  injector-registered-actions.h  lookup-buddy-info-action.cpp  lookup-buddy-info-action.h  merge-buddies-action.cpp  merge-buddies-action.h  notify-about-buddy-action.cpp  notify-about-buddy-action.h  open-buddy-email-action.cpp  open-buddy-email-action.h  open-description-link-action.cpp  open-description-link-action.h  open-forum-action.cpp  open-forum-action.h  open-get-involved-action.cpp  open-get-involved-action.h  (+30 more)
kadu-core/avatars/: CMakeLists.txt  account-avatar-service.cpp  account-avatar-service.h  aggregated-account-avatar-service.cpp  aggregated-account-avatar-service.h  aggregated-contact-avatar-service.cpp  aggregated-contact-avatar-service.h  avatar-id.cpp  avatar-id.h  avatar-job-manager.cpp  avatar-job-manager.h  avatar-job-runner.cpp  avatar-job-runner.h  avatar-manager.cpp  avatar-manager.h  avatar-module.cpp  avatar-module.h  avatar-shared.cpp  avatar-shared.h  avatar-storage.cpp  avatar-storage.h  avatar.cpp  avatar.h  avatars.cpp  avatars.h  contact-avatar-downloader.cpp  contact-avatar-downloader.h  contact-avatar-global-id.cpp  contact-avatar-global-id.h  contact-avatar-id.cpp  contact-avatar-id.h  contact-avatar-service.cpp  contact-avatar-service.h  http-avatar-downloader.cpp  http-avatar-downloader.h  serial-avatar-downloader.cpp  serial-avatar-downloader.h
kadu-core/buddies/: CMakeLists.txt  avatar-manager.cpp  avatar.cpp  (+59 more)
kthxbye/: CMakeLists.txt
libgadu/: .cvsignore  ChangeLog  ChangeLog.1  Makefile  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  autoclean.sh  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in
modules/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  advanced_userlist.web  agent.web  alsa_sound.web  amarok.web  anonymous_check.web  ao_sound.web  autoresponder.cpp  autoresponder.h  check-deps.sh  create-static-modules.bat  create-static-modules.sh  dcopexport.web  download_module  echo.cpp  exec_notify.web  ext_info.web  filedesc.web  filtering.web  firewall.web  generate-modver.pl  geoip_lookup.web  get-all.bat  get-all.sh  get-list.bat  get-list.sh  iwait4u.web  led_notify.web  mail.web  miastoplusa_sms.web  mime_tex.web  module.rc  modver.bat  mx610_notify.web  nextinfo.web  osdhints_notify.web  (+14 more)
plugins/: CMakeLists.txt  PluginConfig.cmake.in  check-deps.sh  plugin.rc  pluginbase.rc  pluginbase.rc.in  pluginrcgen.bat  plugver.bat
tests/: CMakeLists.txt
translations/: CMakeLists.txt  Makefile.am  Makefile.in  configuration-ui.xsl  es_MX.language  kadu_ach.ts  kadu_ca.ts  kadu_ca@valencia.ts  kadu_cs.ts  kadu_de.qm  kadu_de.ts  kadu_el.ts  kadu_en.qm  kadu_en.ts  kadu_es.ts  kadu_es_ES.ts  kadu_es_MX.ts  kadu_es_VE.ts  kadu_fr.qm  kadu_fr.ts  kadu_hu.ts  kadu_it.qm  kadu_it.ts  kadu_ja.ts  kadu_pl.qm  kadu_pl.ts  kadu_pt_BR.ts  kadu_ru.ts  kadu_ru_RU.ts  kadu_sk.ts  kadu_szl.ts  kadu_tr.ts  kadu_tr_TR.ts  kadu_uk.ts  kadu_uk_UA.ts  kadu_vi.ts  kadu_vi_VN.ts  kadu_zh_CN.ts  plugintsupdate.sh  qt_de.qm  (+24 more)
varia/: CMakeLists.txt  Makefile.am  Makefile.in  sound.conf
(+8993 files in other folders)
